// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LPDashboard snapshots > matches the fund confirmation modal with sample values 1`] = `
<DocumentFragment>
  <div
    class="bg-surface-container-lowest rounded-2xl shadow-xl overflow-hidden border border-outline-variant/10 min-h-[500px]"
  >
    <div
      class="p-6 border-b border-surface-dim flex flex-col md:flex-row justify-between items-start md:items-center gap-4"
    >
      <div>
        <h3
          class="text-xl font-bold flex items-center gap-2"
        >
          <span
            class="material-symbols-outlined text-primary"
          >
            monitoring
          </span>
          LP Dashboard
        </h3>
        <p
          class="text-sm text-on-surface-variant mt-1"
        >
          Browse and fund invoices to earn yield.
        </p>
      </div>
      <div
        class="flex bg-surface-container-low p-1 rounded-xl"
      >
        <button
          class="px-4 py-2 rounded-lg text-sm font-bold transition-all bg-primary text-surface-container-lowest shadow-md"
        >
          Discovery
        </button>
        <button
          class="px-4 py-2 rounded-lg text-sm font-bold transition-all text-on-surface-variant hover:bg-surface-variant/30"
        >
          My Funded
        </button>
      </div>
    </div>
    <div
      class="overflow-x-auto"
    >
      <table
        class="w-full text-left"
      >
        <thead
          class="bg-surface-container-low"
        >
          <tr>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider"
            >
              ID
            </th>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider"
            >
              Freelancer
            </th>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider cursor-pointer group"
            >
              Amount ↓
            </th>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider cursor-pointer group"
            >
              Discount 
            </th>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider cursor-pointer group"
            >
              Due Date 
            </th>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider"
            >
              Est. Yield
            </th>
            <th
              class="px-6 py-4"
            />
          </tr>
        </thead>
        <tbody
          class="divide-y divide-surface-dim"
        >
          <tr
            class="hover:bg-surface-variant/10 transition-colors"
          >
            <td
              class="px-6 py-5 font-bold text-primary"
            >
              #1
            </td>
            <td
              class="px-6 py-5"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm font-medium"
                >
                  GAAAAA...AWHF
                </span>
                <span
                  class="text-[10px] text-on-surface-variant"
                >
                  Payer: GDDDDD...DDD2
                </span>
              </div>
            </td>
            <td
              class="px-6 py-5 font-bold"
            >
              $150.00
            </td>
            <td
              class="px-6 py-5"
            >
              <span
                class="bg-primary-container text-on-primary-container px-2 py-0.5 rounded text-xs font-bold"
              >
                2.50%
              </span>
            </td>
            <td
              class="px-6 py-5 text-sm"
            >
              5/15/2027
            </td>
            <td
              class="px-6 py-5 font-bold text-green-600"
            >
              $3.75
            </td>
            <td
              class="px-6 py-5 text-right"
            >
              <button
                class="bg-primary text-surface-container-lowest text-xs px-4 py-2 rounded-lg font-bold hover:bg-primary/90 shadow-sm active:scale-95 transition-all"
              >
                Fund
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="fixed inset-0 z-[100] flex items-center justify-center p-4 bg-background/80 backdrop-blur-sm"
    >
      <div
        class="bg-surface-container-lowest rounded-2xl shadow-2xl border border-outline-variant/20 w-full max-w-md overflow-hidden animate-in fade-in zoom-in duration-200"
      >
        <div
          class="p-6 border-b border-surface-dim"
        >
          <h4
            class="text-xl font-bold"
          >
            Fund Invoice #1
          </h4>
          <p
            class="text-sm text-on-surface-variant mt-1"
          >
            Approve USDC only when the current allowance is too low, then complete the funding transaction.
          </p>
        </div>
        <div
          class="p-6 space-y-4"
        >
          <div
            class="rounded-xl border border-outline-variant/20 bg-surface-container-low p-4"
          >
            <div
              class="flex items-start gap-3"
            >
              <div
                class="mt-0.5 flex h-7 w-7 items-center justify-center rounded-full text-xs font-bold bg-primary-container text-on-primary-container"
              >
                1
              </div>
              <div
                class="min-w-0"
              >
                <p
                  class="text-sm font-bold"
                >
                  Step 1: Approve USDC
                </p>
                <p
                  class="text-xs text-on-surface-variant mt-1"
                >
                  Approve exactly $150.00 for the ILN contract.
                </p>
              </div>
            </div>
            <div
              class="mt-3 flex items-center justify-between text-xs text-on-surface-variant"
            >
              <span>
                Current allowance
              </span>
              <span
                class="font-bold text-on-surface"
              >
                $0.00
              </span>
            </div>
          </div>
          <div
            class="rounded-xl border border-outline-variant/20 bg-surface-container-low p-4"
          >
            <div
              class="flex items-start gap-3"
            >
              <div
                class="mt-0.5 flex h-7 w-7 items-center justify-center rounded-full text-xs font-bold bg-surface-container-high text-on-surface-variant"
              >
                2
              </div>
              <div>
                <p
                  class="text-sm font-bold"
                >
                  Step 2: Fund Invoice
                </p>
                <p
                  class="text-xs text-on-surface-variant mt-1"
                >
                  Send the invoice principal once the ILN contract can spend your USDC.
                </p>
              </div>
            </div>
          </div>
          <div
            class="flex justify-between text-sm"
          >
            <span
              class="text-on-surface-variant"
            >
              You will send:
            </span>
            <span
              class="font-bold"
            >
              $150.00
            </span>
          </div>
          <div
            class="flex justify-between text-sm text-green-600 font-medium"
          >
            <span>
              Freelancer receives immediately:
            </span>
            <span>
              $146.25
            </span>
          </div>
          <div
            class="flex justify-between text-sm"
          >
            <span
              class="text-on-surface-variant"
            >
              You receive on settlement:
            </span>
            <span
              class="font-bold"
            >
              $150.00
            </span>
          </div>
          <div
            class="flex justify-between text-sm border-t border-surface-dim pt-4"
          >
            <span
              class="text-on-surface-variant"
            >
              Your yield (discount):
            </span>
            <span
              class="font-bold text-green-600"
            >
              $3.75 (2.50%)
            </span>
          </div>
          <div
            class="flex justify-between text-sm"
          >
            <span
              class="text-on-surface-variant"
            >
              Estimated due date:
            </span>
            <span
              class="font-bold"
            >
              5/15/2027
            </span>
          </div>
        </div>
        <div
          class="p-6 bg-surface-container-low flex gap-3"
        >
          <button
            class="flex-1 py-3 rounded-xl font-bold text-sm border border-outline-variant hover:bg-surface-dim transition-colors disabled:opacity-50"
          >
            Cancel
          </button>
          <button
            class="flex-[2] py-3 rounded-xl font-bold text-sm bg-primary text-surface-container-lowest hover:bg-primary/90 transition-all active:scale-95 disabled:opacity-50 flex items-center justify-center gap-2"
          >
            Approve USDC
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LPDashboard snapshots > matches the invoice table discovery state with fixture data 1`] = `
<DocumentFragment>
  <div
    class="bg-surface-container-lowest rounded-2xl shadow-xl overflow-hidden border border-outline-variant/10 min-h-[500px]"
  >
    <div
      class="p-6 border-b border-surface-dim flex flex-col md:flex-row justify-between items-start md:items-center gap-4"
    >
      <div>
        <h3
          class="text-xl font-bold flex items-center gap-2"
        >
          <span
            class="material-symbols-outlined text-primary"
          >
            monitoring
          </span>
          LP Dashboard
        </h3>
        <p
          class="text-sm text-on-surface-variant mt-1"
        >
          Browse and fund invoices to earn yield.
        </p>
      </div>
      <div
        class="flex bg-surface-container-low p-1 rounded-xl"
      >
        <button
          class="px-4 py-2 rounded-lg text-sm font-bold transition-all bg-primary text-surface-container-lowest shadow-md"
        >
          Discovery
        </button>
        <button
          class="px-4 py-2 rounded-lg text-sm font-bold transition-all text-on-surface-variant hover:bg-surface-variant/30"
        >
          My Funded
        </button>
      </div>
    </div>
    <div
      class="overflow-x-auto"
    >
      <table
        class="w-full text-left"
      >
        <thead
          class="bg-surface-container-low"
        >
          <tr>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider"
            >
              ID
            </th>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider"
            >
              Freelancer
            </th>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider cursor-pointer group"
            >
              Amount ↓
            </th>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider cursor-pointer group"
            >
              Discount 
            </th>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider cursor-pointer group"
            >
              Due Date 
            </th>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider"
            >
              Est. Yield
            </th>
            <th
              class="px-6 py-4"
            />
          </tr>
        </thead>
        <tbody
          class="divide-y divide-surface-dim"
        >
          <tr
            class="hover:bg-surface-variant/10 transition-colors"
          >
            <td
              class="px-6 py-5 font-bold text-primary"
            >
              #1
            </td>
            <td
              class="px-6 py-5"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm font-medium"
                >
                  GAAAAA...AWHF
                </span>
                <span
                  class="text-[10px] text-on-surface-variant"
                >
                  Payer: GDDDDD...DDD2
                </span>
              </div>
            </td>
            <td
              class="px-6 py-5 font-bold"
            >
              $150.00
            </td>
            <td
              class="px-6 py-5"
            >
              <span
                class="bg-primary-container text-on-primary-container px-2 py-0.5 rounded text-xs font-bold"
              >
                2.50%
              </span>
            </td>
            <td
              class="px-6 py-5 text-sm"
            >
              5/15/2027
            </td>
            <td
              class="px-6 py-5 font-bold text-green-600"
            >
              $3.75
            </td>
            <td
              class="px-6 py-5 text-right"
            >
              <button
                class="bg-primary text-surface-container-lowest text-xs px-4 py-2 rounded-lg font-bold hover:bg-primary/90 shadow-sm active:scale-95 transition-all"
              >
                Fund
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LPDashboard snapshots > matches the lp portfolio style my-funded view with mixed invoice outcomes 1`] = `
<DocumentFragment>
  <div
    class="bg-surface-container-lowest rounded-2xl shadow-xl overflow-hidden border border-outline-variant/10 min-h-[500px]"
  >
    <div
      class="p-6 border-b border-surface-dim flex flex-col md:flex-row justify-between items-start md:items-center gap-4"
    >
      <div>
        <h3
          class="text-xl font-bold flex items-center gap-2"
        >
          <span
            class="material-symbols-outlined text-primary"
          >
            monitoring
          </span>
          LP Dashboard
        </h3>
        <p
          class="text-sm text-on-surface-variant mt-1"
        >
          Browse and fund invoices to earn yield.
        </p>
      </div>
      <div
        class="flex bg-surface-container-low p-1 rounded-xl"
      >
        <button
          class="px-4 py-2 rounded-lg text-sm font-bold transition-all text-on-surface-variant hover:bg-surface-variant/30"
        >
          Discovery
        </button>
        <button
          class="px-4 py-2 rounded-lg text-sm font-bold transition-all bg-primary text-surface-container-lowest shadow-md"
        >
          My Funded
        </button>
      </div>
    </div>
    <div
      class="overflow-x-auto"
    >
      <table
        class="w-full text-left"
      >
        <thead
          class="bg-surface-container-low"
        >
          <tr>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider"
            >
              ID
            </th>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider"
            >
              Freelancer
            </th>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider cursor-pointer group"
            >
              Amount ↓
            </th>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider cursor-pointer group"
            >
              Discount 
            </th>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider cursor-pointer group"
            >
              Due Date 
            </th>
            <th
              class="px-6 py-4 text-[11px] font-bold uppercase text-on-surface-variant tracking-wider"
            >
              Est. Yield
            </th>
            <th
              class="px-6 py-4"
            />
          </tr>
        </thead>
        <tbody
          class="divide-y divide-surface-dim"
        >
          <tr
            class="hover:bg-surface-variant/10 transition-colors"
          >
            <td
              class="px-6 py-5 font-bold text-primary"
            >
              #5
            </td>
            <td
              class="px-6 py-5"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm font-medium"
                >
                  GBBBBB...BBRY
                </span>
                <span
                  class="text-[10px] text-on-surface-variant"
                >
                  Payer: GDDDDD...DDD2
                </span>
              </div>
            </td>
            <td
              class="px-6 py-5 font-bold"
            >
              $450.00
            </td>
            <td
              class="px-6 py-5"
            >
              <span
                class="bg-primary-container text-on-primary-container px-2 py-0.5 rounded text-xs font-bold"
              >
                6.50%
              </span>
            </td>
            <td
              class="px-6 py-5 text-sm"
            >
              3/1/2026
            </td>
            <td
              class="px-6 py-5 font-bold text-green-600"
            >
              $29.25
            </td>
            <td
              class="px-6 py-5 text-right"
            >
              <span
                class="text-[10px] font-bold uppercase px-2 py-1 rounded bg-red-100 text-red-700"
              >
                Defaulted
              </span>
            </td>
          </tr>
          <tr
            class="hover:bg-surface-variant/10 transition-colors"
          >
            <td
              class="px-6 py-5 font-bold text-primary"
            >
              #3
            </td>
            <td
              class="px-6 py-5"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm font-medium"
                >
                  GCCCCC...CCC6
                </span>
                <span
                  class="text-[10px] text-on-surface-variant"
                >
                  Payer: GEEEEE...EEEF
                </span>
              </div>
            </td>
            <td
              class="px-6 py-5 font-bold"
            >
              $310.00
            </td>
            <td
              class="px-6 py-5"
            >
              <span
                class="bg-primary-container text-on-primary-container px-2 py-0.5 rounded text-xs font-bold"
              >
                5.25%
              </span>
            </td>
            <td
              class="px-6 py-5 text-sm"
            >
              5/3/2027
            </td>
            <td
              class="px-6 py-5 font-bold text-green-600"
            >
              $16.28
            </td>
            <td
              class="px-6 py-5 text-right"
            >
              <span
                class="text-[10px] font-bold uppercase px-2 py-1 rounded bg-red-100 text-red-700"
              >
                PartiallyFunded
              </span>
            </td>
          </tr>
          <tr
            class="hover:bg-surface-variant/10 transition-colors"
          >
            <td
              class="px-6 py-5 font-bold text-primary"
            >
              #2
            </td>
            <td
              class="px-6 py-5"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm font-medium"
                >
                  GBBBBB...BBRY
                </span>
                <span
                  class="text-[10px] text-on-surface-variant"
                >
                  Payer: GDDDDD...DDD2
                </span>
              </div>
            </td>
            <td
              class="px-6 py-5 font-bold"
            >
              $225.00
            </td>
            <td
              class="px-6 py-5"
            >
              <span
                class="bg-primary-container text-on-primary-container px-2 py-0.5 rounded text-xs font-bold"
              >
                4.00%
              </span>
            </td>
            <td
              class="px-6 py-5 text-sm"
            >
              4/27/2027
            </td>
            <td
              class="px-6 py-5 font-bold text-green-600"
            >
              $9.00
            </td>
            <td
              class="px-6 py-5 text-right"
            >
              <span
                class="text-[10px] font-bold uppercase px-2 py-1 rounded bg-blue-100 text-blue-700"
              >
                Funded
              </span>
            </td>
          </tr>
          <tr
            class="hover:bg-surface-variant/10 transition-colors"
          >
            <td
              class="px-6 py-5 font-bold text-primary"
            >
              #4
            </td>
            <td
              class="px-6 py-5"
            >
              <div
                class="flex flex-col"
              >
                <span
                  class="text-sm font-medium"
                >
                  GAAAAA...AWHF
                </span>
                <span
                  class="text-[10px] text-on-surface-variant"
                >
                  Payer: GEEEEE...EEEF
                </span>
              </div>
            </td>
            <td
              class="px-6 py-5 font-bold"
            >
              $97.50
            </td>
            <td
              class="px-6 py-5"
            >
              <span
                class="bg-primary-container text-on-primary-container px-2 py-0.5 rounded text-xs font-bold"
              >
                3.00%
              </span>
            </td>
            <td
              class="px-6 py-5 text-sm"
            >
              5/10/2026
            </td>
            <td
              class="px-6 py-5 font-bold text-green-600"
            >
              $2.93
            </td>
            <td
              class="px-6 py-5 text-right"
            >
              <span
                class="text-[10px] font-bold uppercase px-2 py-1 rounded bg-green-100 text-green-700"
              >
                Paid
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
